--- a/latihan6.css
+++ b/latihan6.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/images/lapone.jpg");
+    background-image: url("/latihan6_files/lapone.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
     background-attachment: fixed;
